Nix double openers

--- a/sent/2020-03-26.html
+++ b/sent/2020-03-26.html
@@ -263,7 +263,7 @@
         <tr>
                     <td style="background-color: #FFFFFF; padding: 20px 20px; font-family: 'Open Sans', sans-serif; font-size: 15px; line-height: 24px; color: #555555;">
 
-                        <p style="margin: 0; font-family: 'Open Sans', sans-serif;">Dear colleagues,<br><br>
+                        <p style="margin: 0; font-family: 'Open Sans', sans-serif;">
                             Hi all,<br><br>
                             
                             As part of the SFU library, the DHIL has now ceased all in-person operations with the intention to re-open once the library resumes its normal operations. To get more information on library operations and available resources please consult <a href="https://www.lib.sfu.ca/about/covid-19">this page</a>. <br><br>
